--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ h1, p, a, ul, li {
 }
 .header__datepicker-item {
     margin: 0 0 0 23px;
+    flex-basis: 200px;
 }
 .main {
     background-color: #fafafa;
